@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.5.2-cvs-b36';
+$gallery->version = '1.5.2-cvs-b37';
 $gallery->config_version = 94;
 $gallery->album_version = 37;
 $gallery->user_version = 6;
