@@ -1,3 +1,7 @@
+2005-11-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b37
+
+ * Fix: Watermarking with ImageMagick was broken since b19.
+
 2005-11-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b36
 
  * Fix: Commenting was broken when comments_addType was 'inside'
@@ -159,6 +163,8 @@
  * New: Added js/toggle.js
 
 2005-10-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b19
+
+ * Change: Different param order for ImageMagick.
 
  * Change: removed function removeTags(), which was just a wrapper for strip_tags()
 
